# Data-Compression-Project

./: .gitignore  CMakeLists.txt  README.md
src/: encoding_lossless.h  encoding_lossless.hpp  encoding_lossly.cpp  encoding_lossly.h  encoding_lossy.hpp  programme  test.cpp  utils.h  utils.hpp
